Update snapshot URLs and add protocol parameters
Changed snapshot download URLs in config_private_tangle.json to use the /l1/ path. Added protocol_parameters.json for Hornet node configuration. Updated bootstrap.sh to create coordinator directories required for node setup.

--- a/lnk-main-node/assets/hornet/config.sedimark.json
+++ b/lnk-main-node/assets/hornet/config.sedimark.json
@@ -36,8 +36,8 @@
     "deltaPath": "snapshots/delta_snapshot.bin",
     "downloadURLs": [
       {
-        "full": "http://snapshots.stardust.linksfoundation.com/full_snapshot.bin",
-        "delta": "http://snapshots.stardust.linksfoundation.com/delta_snapshot.bin"
+        "full": "http://snapshots.stardust.linksfoundation.com/l1/full_snapshot.bin",
+        "delta": "http://snapshots.stardust.linksfoundation.com/l1/delta_snapshot.bin"
       }
     ]
   },
